load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/type_index/*.hpp",
    "include/boost/type_index/runtime_cast/*.hpp",
]

cc_library(
    name = "type_index_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "type_index",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":type_index_internal",
        "@boost//throw_exception",
    ],
)
